scenario-1/dump/cluster-0/end-20260525T104649Z/02-istio-config/destinationrule.tier1.tier1-tier1-echo-gwecho-tetrate-io.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.xcp.tetrate.io/v2","kind":"Tier1Gateway","metadata":{"annotations":{},"labels":{"xcp.tetrate.io/gatewayGroup":"tier1-gg","xcp.tetrate.io/workspace":"passthrough-ws"},"name":"tier1-echo-gw","namespace":"xcp-system"},"spec":{"passthroughServers":[{"clusters":[{"name":"cluster-1","weight":100}],"hostname":"echo.tetrate.io","name":"echo","port":17443}],"workloadSelector":{"labels":{"app":"tier1-gateway"},"namespace":"tier1"}}}
    xcp.tetrate.io/contentHash: 1052fe8e94de114b8e0f4ce7009ab4d6
  creationTimestamp: "2026-05-25T10:44:26Z"
  generation: 1
  labels:
    istio.io/rev: global
    xcp.tetrate.io/gatewayGroup: tier1-gg
    xcp.tetrate.io/workspace: passthrough-ws
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:xcp.tetrate.io/contentHash: {}
        f:labels:
          .: {}
          f:istio.io/rev: {}
          f:xcp.tetrate.io/gatewayGroup: {}
          f:xcp.tetrate.io/workspace: {}
      f:spec:
        .: {}
        f:exportTo: {}
        f:host: {}
        f:subsets: {}
        f:workloadSelector:
          .: {}
          f:matchLabels:
            .: {}
            f:app: {}
    manager: xcpd
    operation: Update
    time: "2026-05-25T10:44:26Z"
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-25T10:44:34Z"
  name: tier1-tier1-echo-gwecho-tetrate-io
  namespace: tier1
  resourceVersion: "618018"
  uid: 3bde67cb-d8f3-4511-bfb0-43443bb2973f
spec:
  exportTo:
  - .
  host: echo.tetrate.io
  subsets:
  - labels:
      xcp.tetrate.io/cluster: cluster-1
      xcp.tetrate.io/svc-port-17443: "true"
    name: tier1-echo-gw-echo-passthrough-0
    trafficPolicy:
      portLevelSettings:
      - loadBalancer:
          localityLbSetting:
            enabled: true
            failoverPriority:
            - topology.kubernetes.io/region
            - topology.istio.io/network
            - topology.kubernetes.io/zone
            - topology.istio.io/subzone
        outlierDetection:
          consecutiveGatewayErrors: 10
          maxEjectionPercent: 100
        port:
          number: 17443
        tls: {}
  workloadSelector:
    matchLabels:
      app: tier1-gateway
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0173/
    level: ERROR
    type:
      code: IST0173
